# Claude-Mux

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml  uninstall.sh  validate_css.py
.github/workflows/: ci.yml
claude_mux/: __init__.py  __main__.py  cli.py  config.py  failover.py  instance.py  proxy.py  sync.py  tui.py  tui.py.bak  validate.py
claude_mux.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: CLI.md  FAILOVER.md  KEYBOARD.md  LAUNCH.md  PROVIDERS.md  QUICKSTART.md
tests/: conftest.py  test_cli.py  test_config_manager.py  test_current_settings.py  test_detect_active.py  test_event_log.py  test_failover.py  test_failover_http.py  test_instance_manager.py  test_model_discovery.py  test_number_key.py  test_oauth_polling.py  test_providers.py  test_run_proxy_test.py  test_set_line.py  test_sync_edge_cases.py  test_sync_manager.py  test_time_ago.py  test_utils.py
