[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-mux"
version = "0.1.0"
description = "TUI manager for AI-provider subscriptions (Claude, Copilot, DeepSeek, Gemini)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Cura AI", email = "dan@simple-bookings.dk" }]
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "click>=8.0",
]
keywords = ["tui", "ai", "claude", "llm", "subscription-manager", "failover", "multiplexer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.scripts]
claude-mux = "claude_mux.cli:main"

[project.urls]
Repository = "https://github.com/Cura-Simple-AI/Claude-Mux"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_mux*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
